# runtime

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
api/agent_events/: index.html
api/agent_lifecycle/: index.html
api/checkpoint/: index.html
api/circuit_breaker/: index.html
api/governance/: index.html
api/guardrails/: index.html
api/handoffs/: index.html
api/hooks/: index.html
api/mcp/: index.html
api/memory/: index.html
api/orchestrator/: index.html
api/otel/: index.html
api/output_spec/: index.html
api/permissions/: index.html
api/persistence/: index.html
api/pilot/: index.html
api/policy_engine/: index.html
api/quality_gate/: index.html
api/rate_limit/: index.html
api/retry_policy/: index.html
api/routing/: index.html
api/scheduler/: index.html
api/sinks/: index.html
api/streaming/: index.html
api/usage_tracking/: index.html
assets/: _mkdocstrings.css
changelog/: index.html
compliance/: index.html
compliance/final-diff-review/: index.html
compliance/guard-calibration/: index.html
compliance/pilot-dry-run/: index.html
compliance/pilot-evidence-template/: index.html
compliance/pilot-execution/: index.html
compliance/pilot-operations-runbook/: index.html
compliance/private-rc-publication/: index.html
compliance/production-readiness/: index.html
compliance/rc-inventory/: index.html
compliance/rc-readiness-summary/: index.html
compliance/rc-review-handoff/: index.html
compliance/remote-ci-validation/: index.html
compliance/rollback-execution/: index.html
compliance/rollback-proof-checklist/: index.html
compliance/security-review/: index.html
compliance/stable-promotion/: index.html
compliance/staging-manifest/: index.html
consuming-as-a-library/: index.html
docs/: changelog.md  consuming-as-a-library.md  getting-started.md  index.md  migrating-from-0.0.x.md  migrating-from-0.1.x.md  migrating-from-0.3.x.md
docs/api/: agent_events.md  agent_lifecycle.md  checkpoint.md  circuit_breaker.md  governance.md  guardrails.md  handoffs.md  hooks.md  mcp.md  memory.md  orchestrator.md  otel.md  output_spec.md  permissions.md  persistence.md  pilot.md  policy_engine.md  quality_gate.md  rate_limit.md  retry_policy.md  routing.md  scheduler.md  sinks.md  streaming.md  usage_tracking.md
docs/compliance/: final-diff-review.md  guard-calibration.md  index.md  pilot-dry-run.md  pilot-evidence-template.md  pilot-execution.md  pilot-operations-runbook.md  private-rc-publication.md  production-readiness.md  rc-inventory.md  rc-readiness-summary.md  rc-review-handoff.md  remote-ci-validation.md  rollback-execution.md  rollback-proof-checklist.md  security-review.md  stable-promotion.md  staging-manifest.md
docs/eu-ai-act/: audit-log.md  conformity-checklist.md  cybersecurity.md  human-oversight.md  incident-reporting.md  index.md  risk-management.md  transparency.md
docs/patterns/: agent-events.md  circuit-breaker.md  durability-postgres.md  durability-redis.md  durability.md  governance.md  hooks.md  lifecycle.md  mcp.md  memory.md  orchestrator.md  permissions.md  pilot-profile.md  policy.md  quality-gate.md  rate-limiting.md  retry.md  routing.md  streaming.md  typed-outputs.md  usage-tracking.md
docs/tutorials/: end-to-end.md
docs_theme/: 404.html  main.html
eu-ai-act/: index.html
eu-ai-act/audit-log/: index.html
eu-ai-act/conformity-checklist/: index.html
eu-ai-act/cybersecurity/: index.html
eu-ai-act/human-oversight/: index.html
examples/: durable_agent.py  parallel_tools.py  pricing.json  tiny_agent.py
getting-started/: index.html
migrating-from-0.0.x/: index.html
migrating-from-0.1.x/: index.html
migrating-from-0.3.x/: index.html
scripts/: check_changelog.py  check_ci_guardrails.py  check_dependency_vulnerabilities.py  check_distribution.py  check_docs_public_api.py  check_docs_publication.py  check_final_diff_review.py  check_guard_calibration.py  check_maintenance.py  check_module_coverage.py  check_operations_runbook.py  check_package_policy.py  check_pilot_dry_run.py  check_pilot_evidence.py  check_pilot_execution.py  check_precommit_config.py  check_private_rc_publication.py  check_public_api.py  check_public_branding.py  check_python_support.py  check_rc_readiness.py  check_rc_review_handoff.py  check_release_evidence.py  check_release_tag.py  check_release_workflow.py  check_remote_ci_validation.py  check_repo_hygiene.py  check_rollback_execution.py  check_secret_leaks.py  check_security_patterns.py  check_security_review.py  check_source_hygiene.py  check_stable_promotion.py  check_staging_manifest.py  check_toolchain_pins.py  check_version_consistency.py  check_workflow_hardening.py  check_workflow_pinning.py  install_toolchain.py  release_preflight.py
search/: search_index.json
styles/: runtime.css
tests/: conftest.py  test_agent_events.py  test_agent_lifecycle.py  test_async_circuit_breaker.py  test_async_guardrails.py  test_async_orchestrator.py  test_checkpoint.py  test_checkpoint_steps.py  test_ci_guardrails.py  test_circuit_breaker.py  test_classify.py  test_dependency_vulnerabilities.py  test_deprecation_warnings.py  test_distribution.py  test_docs_public_api.py  test_docs_publication.py  test_examples.py  test_final_diff_review.py  test_governance.py  test_governance_events.py  test_governance_integration.py  test_guard_calibration.py  test_guardrails.py  test_handoffs.py  test_hooks.py  test_maintenance.py  test_max_iterations.py  test_mcp.py  test_memory.py  test_operations_runbook.py  test_orchestrator.py  test_otel.py  test_otel_atexit_cleanup.py  test_otel_genai_messages.py  test_otel_nesting.py  test_output_spec.py  test_package_metadata.py  test_package_policy.py  test_pattern_and_prompt_injection_guardrails.py  test_permissions.py  (+40 more)
(+71 files in other folders)
