[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "techrevati-runtime"
version = "0.1.0.dev2"
description = "Production runtime primitives for multi-step LLM agent loops."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "TechRevati doo" }]
keywords = ["agents", "orchestration", "retry", "circuit-breaker", "cost-tracking", "runtime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    # Pinned to match .pre-commit-config.yaml so local and CI lint agree.
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-asyncio==1.3.0",
    "mypy==1.18.2",
    "ruff==0.14.5",
]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[project.urls]
Homepage = "https://github.com/Techrevati/runtime"
Documentation = "https://Techrevati.github.io/runtime"
Changelog = "https://github.com/Techrevati/runtime/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/techrevati"]

[tool.hatch.build.targets.wheel.force-include]
"src/techrevati/runtime/data/pricing.json" = "techrevati/runtime/data/pricing.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-rxXs", "--strict-markers", "--tb=short"]

[tool.coverage.run]
source = ["src/techrevati"]
branch = true

[tool.coverage.report]
fail_under = 90

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
show_error_codes = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N"]
# UP042: pyupgrade wants StrEnum (3.11+); we keep `(str, Enum)` for stable
#        str() / json semantics across consumers.
ignore = ["UP042"]
