[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[project]
name = "techrevati-runtime"
version = "0.3.0rc1"
description = "Async-aware runtime primitives for multi-step LLM agent loops."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Techrevati doo" }]
keywords = ["agents", "orchestration", "retry", "circuit-breaker", "cost-tracking", "runtime"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    # Pinned to match .pre-commit-config.yaml so local and CI lint agree.
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-asyncio==1.4.0",
    "pytest-randomly==4.1.0",
    "hypothesis==6.155.2",
    "mypy==2.1.0",
    "ruff==0.15.18",
    # Optional integrations need to be importable so we can type-check
    # and test the optional modules under mypy --strict.
    "opentelemetry-api==1.42.1",
    "opentelemetry-sdk==1.42.1",
    "opentelemetry-semantic-conventions==0.63b1",
]
build = [
    "build==1.5.0",
    "twine==6.2.0",
]
docs = [
    "mkdocs==1.6.1",
    "mkdocstrings[python]==1.0.4",
    "mkdocstrings-python==2.0.4",
    "ruff==0.15.18",
]
release = [
    "build==1.5.0",
    "cyclonedx-bom==7.3.0",
    "twine==6.2.0",
]
audit = [
    "pip-audit==2.10.0",
]
otel = [
    "opentelemetry-api>=1.27,<2",
    "opentelemetry-sdk>=1.27,<2",
    "opentelemetry-semantic-conventions>=0.48b0,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/techrevati"]

[tool.hatch.build.targets.wheel.force-include]
"src/techrevati/runtime/data/pricing.json" = "techrevati/runtime/data/pricing.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-rxXs", "--strict-markers", "--tb=short"]

[tool.coverage.run]
source = ["src/techrevati"]
branch = true

[tool.coverage.report]
fail_under = 90

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
show_error_codes = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N"]
# UP042: pyupgrade wants StrEnum (3.11+); we keep `(str, Enum)` for stable
#        str() / json semantics across consumers.
ignore = ["UP042"]
